# reserva-lp3

./: README.md  bdd_reserva.sql  lista_reservas.csv  lista_salas.csv  lista_usuarios.csv  pyproject.toml
reserva_app/: app.py  csv.py  datetime_utils.py  dicionario_csv.py  reserva_service.py  sala_service.py  usuario_service.py
reserva_app/banco/: banco.py  mysql_utils.py
reserva_app/service/: reserva_service.py  sala_service.py  usuario_service.py
reserva_app/templates/: cadastrar-sala.html  cadastro.html  layout.html  listar-salas.html  login.html  reservar-sala.html  reservas.html  teste.html
reserva_app/templates/reserva/: detalhe-reserva.html
reserva_app/utils/: datetime_utils.py
